--- a/index.html
+++ b/index.html
@@ -2,44 +2,40 @@
 <html lang="ro">
 <head>
     <meta charset="UTF-8">
-    <title>Decizie 20%-80%</title>
+    <title>Joc de noroc</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 100px;
-            background-color: #f0f0f0;
+            margin: 0;
+            height: 100vh;
+            background-color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        #raspuns{
-            font-size: 48px;
-            margin-top: 20px;
-        }
-        .da{color:green;}
-        .nu{color:red;}
-        button{
-            font-size: 24px;
-            padding: 10px 20px;
+        .box{
+            width: 200px;
+            height: 200px;
+            background-color: rgb(4, 0, 255);
+            color: white;
+            font-size: 200px;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             cursor: pointer;
+            transition: transform 0.2s, background-color 0.3s;
+            text-align: center;
         }
-    </style>
+        .box:hover{
+            transform: scale(1.05);
+            background-color: rgb(0, 0, 200);
+        }
+       </style>
 </head>
 <body>
-    <h1>Gandeste-te la o intrebare si apasa pe buton</h1>
-    <button onclick="decide()">Află răspunsul</button>
-    <div id="raspuns"></div>
-
-    <script>
-        function decide() {
-            // 20% "Da",80% "Nu"
-            const sanseDa = 20;
-            const num = Math.floor(Math.random() * 100);
-            const rezultat = (num < sanseDa) ? "Da" : "Nu";
-    
-            //afiseaza rezultatul in div si pune cculoarea corespunzatoare
-            const div = document.getElementById('raspuns');
-            div.innerHTML = rezultat;
-            div.className = rezultat.toLowerCase(); // fix: use lowercase for CSS class
-        }
-    </script>
+    <div class="box" onclick="window.location.href='joc.html'">Intra in Joc
+    </div>
 </body>
-</html>
+</html>   
