--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: 200px;
             background-color: rgb(4, 0, 255);
             color: white;
-            font-size: 200px;
+            font-size: 38px;
             font-weight: bold;
             display: flex;
             justify-content: center;
@@ -36,6 +36,9 @@
 </head>
 <body>
     <div class="box" onclick="window.location.href='joc.html'">Intra in Joc
+    </div>
+    <div class="box" onclick="window.location.href='roulette.html'">Intra la
+  Roulette
     </div>
 </body>
 </html>   
