--- a/roulette.html
+++ b/roulette.html
@@ -86,7 +86,7 @@
     .chip-container {
       display: flex;
       align-items: center;
-      margin-top: 200px 0;
+      margin-top: 200px ;
       gap: 20px;
     }
 
@@ -281,43 +281,49 @@
       clearInterval(interval);
       clearInterval(timer);
     });
-   // Editable sum-box logic
-  sumBox.addEventListener("dblclick", () => {
-    const input = document.createElement("input");
-    input.type = "number";
-    input.value = sum;
-    input.style.width = "100%";
-    input.style.height = "100%";
-    input.style.fontSize = "20px";
-    input.style.textAlign = "center";
-    input.style.border = "none";
-    input.style.background = "red";
-    input.style.color = "white";
-    input.style.fontWeight = "bold";
-    input.style.borderRadius = "8px";
+   sumBox.addEventListener("dblclick", showInput);
+sumBox.addEventListener("touchstart", showInput);
 
-    sumBox.textContent = "";
-    sumBox.appendChild(input);
-    input.focus();
+function showInput() {
+  if (sumBox.querySelector("input")) return; // Prevent multiple inputs
+  const input = document.createElement("input");
+  input.type = "number";
+  input.value = sum;
+  input.style.width = "100%";
+  input.style.height = "100%";
+  input.style.fontSize = "20px";
+  input.style.textAlign = "center";
+  input.style.border = "none";
+  input.style.background = "red";
+  input.style.color = "white";
+  input.style.fontWeight = "bold";
+  input.style.borderRadius = "8px";
 
-    function updateSum() {
-      let newVal = parseInt(input.value);
-      if (!isNaN(newVal) && newVal >= 0) {
-        sum = newVal;
-        sumBox.textContent = sum;
-      } else {
-        sumBox.textContent = sum;
-      }
+  sumBox.textContent = "";
+  sumBox.appendChild(input);
+  input.focus();
+
+  function updateSum() {
+    let newVal = parseInt(input.value);
+    if (!isNaN(newVal) && newVal >= 0) {
+      sum = newVal;
+      sumBox.textContent = sum;
+    } else {
+      sumBox.textContent = sum;
     }
+  }
 
-    input.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") {
-        updateSum();
-      }
-    });
-    input.addEventListener("blur", updateSum);
-  }); 
-  </script>
+  input.addEventListener("keydown", (e) => {
+    if (e.key === "Enter") {
+      updateSum();
+    }
+  });
+  input.addEventListener("blur", updateSum);
+    }
+     </script>
+  </body>
+  </html>
+
 
 
 
