--- a/roulette.html
+++ b/roulette.html
@@ -92,47 +92,49 @@
 
     /* chipuri */
     .chip {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: bold;
-      font-size: 18px;
-      color: white;
-      position: relative;
-      cursor: pointer;
-      box-shadow: 0 0 10px rgba(0,0,0,0.6);
-    }
+  width: 23px;   /* 70 / 3 ≈ 23 */
+  height: 23px;  /* 70 / 3 ≈ 23 */
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 6px; /* 18 / 3 = 6 */
+  color: white;
+  position: relative;
+  cursor: pointer;
+  box-shadow: 0 0 3px rgba(0,0,0,0.6); /* redus și shadow-ul */
+}
 
-    /* cerc interior */
-    .chip::before {
-      content: "";
-      position: absolute;
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      border: 2px dashed white;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+/* cerc interior */
+.chip::before {
+  content: "";
+  position: absolute;
+  width: 18px;   /* 55 / 3 ≈ 18 */
+  height: 18px;  /* 55 / 3 ≈ 18 */
+  border-radius: 50%;
+  border: 1px dashed white; /* mai subțire */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-    /* dungile albe de pe margine */
-    .chip::after {
-      content: "";
-      position: absolute;
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      background: repeating-conic-gradient(
-        white 0deg 10deg,
-        transparent 10deg 30deg
-      );
-      -webkit-mask: radial-gradient(circle 30px, transparent 28px, black 29px);
-      mask: radial-gradient(circle 30px, transparent 28px, black 29px);
-    }
+/* dungile albe de pe margine */
+.chip::after {
+  content: "";
+  position: absolute;
+  width: 23px;   /* 70 / 3 ≈ 23 */
+  height: 23px;  /* 70 / 3 ≈ 23 */
+  border-radius: 50%;
+  background: repeating-conic-gradient(
+    white 0deg 10deg,
+    transparent 10deg 30deg
+  );
+  -webkit-mask: radial-gradient(circle 10px, transparent 9px, black 10px); /* micșorat */
+  mask: radial-gradient(circle 10px, transparent 9px, black 10px);
+}
+
+    
     .chip:active { transform: scale(0.9); }
 
     .chip-1   { background: orange; }
@@ -180,6 +182,7 @@
     .minus-box:active {
       background: #555;
     }
+   
   </style>
 </head>
 <body>
