--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: 80px;
             background-color: rgb(4, 0, 255);
             color: white;
-            font-size: 38px;
+            font-size: 8px;
             font-weight: bold;
             display: flex;
             justify-content: center;
@@ -36,7 +36,7 @@
         .navbar {
       background-color: #002244; /* albastru închis */
       border-bottom: 2px solid white;
-      padding: 10px 20px;
+      padding-right: 10px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
