--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
       position: relative;
     }
 
+    /* iconița setări */
+.settings-icon {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: #002244;
+  cursor: pointer;
+}
+
     /* meniul dropdown */
     .dropdown {
       position: absolute;
