--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
   Roulette
     </div>
     <div class="navbar">
+    <div class="notifications-icon">✉️</div>
+    <div class="settings-icon">⚙️</div>
     <div class="user-icon" id="userIcon">👤</div>
     <div class="dropdown" id="dropdownMenu">
       <a href="#">Login</a>
