--- a/index.html
+++ b/index.html
@@ -54,18 +54,14 @@
         }
 
         .top-center-box {
-    border: 2px solid white;
-    border-radius: 8px;
-    padding: 6px 12px;
-    background-color: #ffd700;
-    color: #002244;
-    font-weight: bold;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.3s, transform 0.2s;
-    margin-right: 30px;  /* distance from the login button */
+            background: gold;
+            color: #002244;
+            font-weight: bold;
+            border: 2px solid white;
+            border-radius: 8px;
+            padding: 6px 12px;
+            cursor: pointer;
+            margin-left: 15px;
     }
 
         /* Navbar */
