--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             color: #002244;
             font-weight: bold;
             border: 2px solid white;
-            border-radius: 8px;
+            width: 96px;
+            height: 30px;
             padding: 6px 12px;
             cursor: pointer;
             margin-left: 15px;
