--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="box" onclick="window.location.href='roulette.html'">Intra la Roulette</div>
 
     <div class="navbar">
-        
+        <button class="top-center-box">100</button>
         <button class="login-btn">Log In</button>
         <div class="notifications-icon" data-tooltip="Notifications">
             ✉️
