--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
             color: #002244;
             font-weight: bold;
             border: 2px solid white;
-            width: 96px;
+            width: 200px;
             height: 30px;
+            border-radius: 8px;
             padding: 6px 12px;
             cursor: pointer;
             margin-left: 15px;
+            margin-right: 60px;
     }  
 
         /* Navbar */
