--- a/index.html
+++ b/index.html
@@ -47,10 +47,29 @@
             padding: 6px 12px;
             cursor: pointer;
             margin-left: 15px;
+            transition: all 0.3s ease;
         }
 
+        .login-btn:hover {
+    background: rgb(255, 230, 50); /* slightly brighter yellow */
+    transform: scale(1.05);        /* grows 5% */
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3); /* subtle shadow */
+    }
+
+          /* optional glow effect */
+       @keyframes glow {
+    0% { box-shadow: 0 0 5px rgba(255,217,2,0.5); }
+    50% { box-shadow: 0 0 20px rgba(255,217,2,0.8); }
+    100% { box-shadow: 0 0 5px rgba(255,217,2,0.5); }
+        }
+
+       .login-btn {
+    animation: glow 2s infinite;
+      }
+
+
         .top-center-box {
-            background: rgb(76, 63, 190);
+            background: rgb(25, 0, 255);
             color: #002244;
             font-weight: bold;
             border: 2px solid white;
